--- a/sourcecode/ts-base/src/tpl/index.html
+++ b/sourcecode/ts-base/src/tpl/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <div class="app"></div>
+    <!-- <script src="../part2.project/02.namespace/a.js"></script> -->
+    <!-- <script src="../part2.project/02.namespace/b.js"></script> -->
+    <script src="../part2.project/04.libs/global-lib.js"></script>
+    <!-- <script src="../part2.project/04.libs/umd-lib.js"></script> -->
+
 </body>
 </html>
